--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.19.0
-  firebase_core: ^2.24.1
-  firebase_auth: ^4.16.0
-  cloud_firestore: ^4.13.2
-  firebase_messaging: ^14.7.10
-  firebase_storage: ^11.3.4
+  intl: ^0.20.2
+  cloud_firestore: ^6.1.1
+  firebase_messaging: ^16.1.0
+  firebase_storage: ^13.0.5
+
+  firebase_auth: ^6.1.3
+  google_sign_in: ^7.2.0
+  firebase_core: ^4.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
